KP-3775 Group hover highlight should include add* buttons: fixed highlight shift
Former-commit-id: 4dd7dd410296e5eb63888c90fce623f483e04648

--- a/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-question-list.css.less
+++ b/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-question-list.css.less
@@ -83,8 +83,8 @@
     }
 
     &.section + .slide {
-      padding-left: 0;
-      margin: -5px 0px 0 20px;
+      padding-left: 20px;
+      margin: -5px 0px 0 0;
      // border-radius: 0 0 4px 4px;
     }
 
