--- a/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/markup.css.css
+++ b/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/markup.css.css
@@ -1,4 +1,4 @@
-﻿/**
+/**
  * WorldBank Designer
  * file: markup.css.less
  * description: LESS main import script
@@ -1699,8 +1699,8 @@ li.chapter-panel-item:hover > .holder > .inner > .handler {
   margin-left: 0;
 }
 .item.section + .slide {
-  padding-left: 0;
-  margin: -5px 0px 0 20px;
+  padding-left: 20px;
+  margin: -5px 0px 0 0;
 }
 .item.section ~ .buttons-item {
   margin: -5px 0px 0 20px;
@@ -1922,8 +1922,8 @@ li.chapter-panel-item:hover > .holder > .inner > .handler {
   margin-left: 0;
 }
 #verify-popover-content .question-list .item.section + .slide {
-  padding-left: 0;
-  margin: -5px 0px 0 20px;
+  padding-left: 20px;
+  margin: -5px 0px 0 0;
 }
 #verify-popover-content .question-list .item.section ~ .buttons-item {
   margin: -5px 0px 0 20px;
@@ -2151,4 +2151,3 @@ li.chapter-panel-item:hover > .holder > .inner > .handler {
 .share-question-dialog a.owner {
   color: #2fc507;
 }
-/*# sourceMappingURL=markup.css.css.map */
